# agam

./: .coderabbit.yaml  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/: CODEOWNERS
knowledge/: graph-schema.sql
prompts/: agam-sync.txt  work-log.txt
scripts/: test-container.sh
src/agam/: bootstrap.py  cli.py  cursor_hooks_merger.py  installer.py  invoker.py  migrate.py  paths.py  settings_merger.py  transcripts.py  tui.py
src/agam/agents/: __init__.py  _copy.py  base.py  claude.py  cursor.py
src/agam/hooks/: agam_watchdog.sh  agam_watchdog_inner.py  cursor_session_end.py  cursor_stop.py  graph_recall.py  graph_update.py  (+3 more)
templates/: AGAM.md.template  CLAUDE.md.template  MUGAM.md.template  THISAI.md.template  com.agam.watchdog.plist.template
tests/: conftest.py  test_agam_context.py  test_agam_context_rule.py  test_agam_lint.py  test_agents.py  test_apply_proposals.py  test_bootstrap_extract.py  test_bootstrap_reconcile.py  test_bootstrap_resume.py  test_bootstrap_scan.py  test_cli.py  test_cursor_hooks.py  test_cursor_hooks_merger.py  test_cursor_rule.py  test_e2e_container.sh  test_graph_recall.py  test_graph_update.py  test_install_sh.sh  test_installer.py  test_invoker.py  test_knowledge_graph.py  test_lesson_activate.py  test_migrate.py  test_package_installable.py  test_paths.py  test_prompts.py  test_provenance.py  test_run_install.py  test_schema_applies.py  test_session_close.py  test_settings_merger.py  test_templates.py  test_transcripts_cursor.py  test_watchdog_inner.py  test_watchdog_monitor.py  test_watchdog_shell.py
(+10 files in other folders)
