[project]
name = "agam"
version = "0.1.0"
description = "Persistent knowledge-graph context injection for Claude Code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "questionary>=2",
]

[dependency-groups]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agam"]
